# execises

./: README.md
.github/workflows/: project1_android.yml
projects/project1_android/: build.gradle  gradle.properties  settings.gradle
projects/project1_android/app/: CMakeLists.txt  build.gradle  build.gradle.template
projects/project1_android/app/libs/: terminal-emulator-0.114.aar
projects/project1_android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.template
projects/project1_android/app/src/main/cpp/: main.cpp
projects/project1_android/app/src/main/java/com/uniaball/project1_android/: GameActivity.java  JNIUtils.java  TerminalBridge.java
projects/project1_android/app/src/main/res/layout/: activity_game.xml
projects/project1_android/app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
